# malinka

./: README.md  base_data.py  bd.xlsx  bd_parser.py  client.py  config.toml  creds.py  fask server.py  helper.py  horse_database.db  horse_main.py  instruction_STT.md  instruction_TTS.md  loger.py  loggers.json  main.py  main_ld.py  nose.txt  optimized_script.py  pyproject.toml  recognition.py  renoise.py  requirements.txt  service.py  set_set.py  setting.py  speach_recognition.py  speach_synthesis.py  speak_recognize.py  speak_synthesis.py  speaxh_synth_api3.py  telegram_bot.py  test.py  yandexGPT.py
google/api/: http_pb2.py
horse_server/: server_main.py
horseclients/: main.py  service.py  setting.py  speach_recognition.py  speach_synthesis.py
keybroadTel/: __init__.py  keybroad.py
rnnoise_wrapper/: __init__.py  cli.py  rnnoise_wrapper.py
rnnoise_wrapper/libs/: librnnoise_default.so.0.4.1
yandex/: setting_com.py
yandex/cloud/ai/stt/v3/: stt_pb2.py
yandex/cloud/ai/tts/v3/: tts_pb2.py
